--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <!--    Bluetooth permission-->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -9,33 +18,55 @@
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-feature android:name="android.hardware.camera.flash" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
-
-
-
+    <!--Brightness permission-->
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
 
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
-        android:roundIcon="@drawable/baseline_circle_24"
+        android:icon="@mipmap/ic_phone_doc"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MegaToolsApp"
         tools:targetApi="31">
+
+        <!-- Brightness activities services-->
+        <activity
+            android:name=".Brightness"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Bluetooth activities services-->
+        <activity
+            android:name=".Bluetooth"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".HomeFragment"
+            android:screenOrientation="portrait">
+        </activity>
+
+
         <activity
             android:name=".SensRotation"
             android:exported="false" />
@@ -72,9 +103,9 @@
         <activity
             android:name=".SensGyro"
             android:exported="false" />
-        <activity
-            android:name=".SensorAccelerate"
-            android:exported="false" />
+        <!--        <activity-->
+        <!--            android:name=".SensorAccelerate"-->
+        <!--            android:exported="false" />-->
         <activity
             android:name=".SensorTest"
             android:exported="false" />
@@ -138,12 +169,7 @@
         <activity
             android:name=".Camera"
             android:exported="false" />
-        <activity
-            android:name=".Brightness"
-            android:exported="false" />
-        <activity
-            android:name=".Bluetooth"
-            android:exported="false" />
+
         <activity
             android:name=".Battery"
             android:exported="false" />
